Name: HDBC
Version: 2.4.0.3
License: BSD3
Maintainer: Nicolas Wu <nicolas.wu@gmail.com>
Author: John Goerzen, Nicolas Wu
homepage: https://github.com/hdbc/hdbc
Copyright: Copyright (c) 2005-2011 John Goerzen
license-file: LICENSE
extra-source-files: LICENSE, Makefile, README.md, CHANGELOG.md
Category: Database
synopsis: Haskell Database Connectivity
Description: HDBC provides an abstraction layer between Haskell programs and SQL
 relational databases. This lets you write database code once, in
 Haskell, and have it work with any number of backend SQL databases
 (MySQL, Oracle, PostgreSQL, ODBC-compliant databases, etc.)
Stability: Stable
Build-Type: Simple

Cabal-Version: >=1.8

source-repository head
  type:            git
  location:        https://github.com/gbwey/hdbc.git

library
  Build-Depends: base>=4 && <5, bytestring, old-time, containers, time, mtl, convertible >= 1.1.0.0, text, utf8-string

  GHC-Options: -O2 -Wall -fno-warn-orphans

  Exposed-Modules: Database.HDBC, Database.HDBC.Types, Database.HDBC.DriverUtils,
    Database.HDBC.ColTypes, Database.HDBC.Statement, Database.HDBC.SqlValue,
    Database.HDBC.Locale
  Other-Modules: Database.HDBC.Utils
  Extensions: ExistentialQuantification, CPP, MultiParamTypeClasses,
    FlexibleContexts, TypeSynonymInstances, TypeOperators, RankNTypes,
    FlexibleInstances, DeriveDataTypeable

Executable runtests
   buildable: False

   Build-Depends: base>=4 && <5, HUnit, QuickCheck (>= 2.0), testpack (>= 2.0), mtl, convertible >= 1.1.0.0, utf8-string, text
   Main-Is: runtests.hs
   Other-Modules: TestSqlValue
                  TestInfrastructure
   Hs-Source-Dirs: ., testsrc
   GHC-Options: -O2
   Extensions: ExistentialQuantification, CPP, MultiParamTypeClasses,
     FlexibleContexts, TypeSynonymInstances, TypeOperators,
     RankNTypes, FlexibleInstances
